Update swagger SDK to include all query routes
