# raiden-swagger-sdk/apis/DefaultApi.ts
@@ -1,45 +1,0 @@
-// tslint:disable
-/**
- * Raiden API
- * https://raiden-network.readthedocs.io/en/stable/rest_api.html
- *
- * The version of the OpenAPI document: 1.0.0
- * 
- *
- * NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
- * https://openapi-generator.tech
- * Do not edit the class manually.
- */
-
-import { Observable } from 'rxjs';
-import { BaseAPI, throwIfRequired, HttpHeaders, HttpQuery, COLLECTION_FORMATS } from '../runtime';
-import {
-    Address,
-} from '../models';
-
-/**
- * no description
- */
-export class DefaultApi extends BaseAPI {
-
-    /**
-     * When raiden starts, you choose an ethereum address which will also be your raiden address.
-     * Query your address
-     */
-    getAddress = (): Observable<Address> => {
-
-        const headers: HttpHeaders = {
-        };
-
-        const query: HttpQuery = {
-        };
-
-        return this.request<Address>({
-            path: `/address`,
-            method: 'GET',
-            headers,
-            query,
-        });
-    }
-
-}
