# raiden-swagger-sdk/apis/RaidenNodeApi.ts
@@ -1,0 +1,44 @@
+// tslint:disable
+/**
+ * Raiden API
+ * https://raiden-network.readthedocs.io/en/stable/rest_api.html
+ *
+ * The version of the OpenAPI document: 1.0.0
+ *
+ *
+ * NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
+ * https://openapi-generator.tech
+ * Do not edit the class manually.
+ */
+
+import { Observable } from "rxjs";
+import {
+  BaseAPI,
+  RequiredError,
+  HttpHeaders,
+  HttpQuery,
+  COLLECTION_FORMATS
+} from "../runtime";
+import { Address } from "../models";
+
+/**
+ * no description
+ */
+export class RaidenNodeApi extends BaseAPI {
+  /**
+   * When raiden starts, you choose an ethereum address which will also be your raiden address.
+   * Query your address
+   */
+  getAddress(): Observable<Address> {
+    const queryParameters: HttpQuery = {};
+
+    const headerParameters: HttpHeaders = {};
+
+    return this.request<Address>({
+      path: `/address`,
+      method: "GET",
+      headers: headerParameters,
+      query: queryParameters
+    });
+  }
+}
