# raiden-swagger-sdk/models/index.ts
@@ -1,1 +1,6 @@
-export * from './Address';
+export * from "./Address";
+export * from "./Channel";
+export * from "./Errors";
+export * from "./Partner";
+export * from "./TokenNetworkAddress";
+export * from "./Transfer";
