# raiden-swagger-sdk/swagger.yaml
@@ -1,29 +1,407 @@
 openapi: 3.0.2
-info:
+info: 
   title: Raiden API
   description: https://raiden-network.readthedocs.io/en/stable/rest_api.html
   version: 1.0.0
 servers:
   - url: http://127.0.0.1:5001/api/v1
     description: local server
-paths:
-  /address:
-    get:
-      summary: Query your address
-      description: When raiden starts, you choose an ethereum address which will also be your raiden address.
+paths: 
+  /address: 
+    get: 
+      summary: "Query your address"
+      description: "When raiden starts, you choose an ethereum address which will also be your raiden address."
+      tags: 
+        - Raiden Node
       operationId: getAddress
-      responses:
-        "200":
+      responses: 
+        '200':
           description: "Your ethereum address"
           content:
             application/json:
+              schema: 
+                $ref: '#/components/schemas/Address'
+  /tokens: 
+    get:
+      summary: "Returns a list of addresses of all registered tokens."
+      tags: 
+        - Tokens
+      operationId: getTokens
+      responses:
+        '200':
+          description: All registered tokens
+          content:
+            application/json:
               schema:
-                $ref: "#/components/schemas/Address"
+                type: array
+                items:
+                  type: string
+        '500':
+          description: Internal Server Error
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Errors'
+    put: 
+      summary: "Registers a token"
+      tags: 
+        - Tokens
+      description: "If a token is not registered yet (i.e.: A token network for that token does not exist in the registry), we need to register it by deploying a token network contract for that token."
+      operationId: registerToken
+      responses: 
+        '201':
+          description: "The token network address"
+          content:
+            application/json:
+              schema: 
+                $ref: '#/components/schemas/TokenNetworkAddress'
+        '404':
+          description: "Token not found"
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Errors'
+        '402':
+          description: "Payment Required"
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Errors'
+        '409':
+          description: "Token already registered"
+          content:
+            application/json:
+              schema:
+                type: string
+                enum: ['Token already registered']
+        '501':
+          description: Not Implemented
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Errors'
+  /tokens/(token_address):
+    get:
+      summary: Address of the corresponding token network 
+      description: Returns the address of the corresponding token network for the given token, if the token is registered.
+      tags: 
+        - Tokens
+      operationId: getToken
+      parameters:
+        - in: path
+          name: token_address
+          schema:
+            type: string
+          required: true
+          description: The token address associated with a token network
+      responses:
+        '200':
+          description: The token network address
+          content:
+            application/json:
+              schema:
+                type: string
+        '404':
+          description: No token network found for the provided token address
+          content:
+            application/json:
+              schema:
+                type: string
+  /tokens/(token_address)/partners:
+    get:
+      summary: List of all partners with whom you have non-settled channels 
+      description: Returns a list of all partners with whom you have non-settled channels for a certain token.
+      tags: 
+        - Tokens
+      operationId: getTokenPartners
+      responses:
+        '200':
+          description: Successful query
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: '#/components/schemas/Partner'
+  /channels/{token_address}: 
+    get: 
+      summary: "Get a list of all unsettled channels."
+      tags: 
+        - Channels
+      operationId: getChannels
+      parameters:
+        - in: path
+          name: token_address
+          schema:
+            type: string
+          required: true
+          description: The token address to get unsettled channels for
+      responses: 
+        '200':
+          description: "Unsettled channels"
+          content:
+            application/json:
+              schema: 
+                type: array
+                items:
+                  $ref: '#/components/schemas/Channel'
+        '500':
+          description: Internal Server Error
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Errors'
+  /channels/{token_address}/{partner_address}: 
+    get: 
+      summary: "Query information about one of your channels."
+      tags: 
+        - Channels
+      description: The channel is specified by the address of the token and the partner’s address.
+      operationId: getPartnerChannel
+      parameters:
+        - in: path
+          name: token_address
+          schema:
+            type: string
+          required: true
+          description: The token address to get unsettled channels for
+        - in: path
+          name: partner_address
+          schema:
+            type: string
+          required: true
+          description: The partner address
+      responses: 
+        '200':
+          description: "Unsettled channels"
+          content:
+            application/json:
+              schema: 
+                $ref: '#/components/schemas/Channel'
+        '404':
+          description: "The given token and / or partner addresses are not valid eip55-encoded Ethereum addresses, or the channel does not exist"
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Errors'
+        '500':
+          description: Internal Server Error
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Errors'
+  /pending_transfers:
+    get:
+      summary: "Returns a list of all transfers that have not been completed yet."
+      operationId: getPendingTransfers
+      tags: 
+        - Pending Transfers
+      responses:
+        '200':
+          description: "Transfers that have not been completed"
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: '#/components/schemas/Transfer'
+        '500':
+          description: Internal Server Error
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Errors'
+  /pending_transfers/{token_address}:
+    get:
+      summary: "List of all transfers that have not been completed yet for this token"
+      tags: 
+        - Pending Transfers
+      operationId: getPendingTransfersForToken
+      parameters:
+        - in: path
+          name: token_address
+          schema:
+            type: string
+          required: true
+          description: The token address you want pending transfers for
+      responses:
+        '200':
+          description: "Transfers that have not been completed"
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: '#/components/schemas/Transfer'
+        '404':
+          description: "The token was not found"
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Errors'
+        '500':
+          description: Internal Server Error
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Errors'
+  /pending_transfers/{token_address}/{partner_address}:
+    get:
+      summary: "List of all transfers that have not been completed yet for this token on this channel"
+      tags: 
+        - Pending Transfers
+      operationId: getPendingTransfersForTokenOnChannel
+      parameters:
+        - in: path
+          name: token_address
+          schema:
+            type: string
+          required: true
+          description: The token address you want pending transfers for
+        - in: path
+          name: partner_address
+          schema:
+            type: string
+          required: true
+          description: The token address you want pending transfers for
+      responses:
+        '200':
+          description: "Transfers that have not been completed"
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: '#/components/schemas/Transfer'
+        '404':
+          description: "The queried channel or token was not found"
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Errors'
+        '500':
+          description: Internal Server Error
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Errors'
 components:
-  schemas:
+  schemas: 
     Address:
       type: object
       properties:
-        our_address:
+        our_address: 
           type: string
           example: "0x2a65Aca4D5fC5B5C859090a6c34d164135398226"
+      required: 
+        - our_address
+    TokenNetworkAddress:
+      type: object
+      properties:
+        token_network_address: 
+          type: string
+          example: "0xC4F8393fb7971E8B299bC1b302F85BfFB3a1275a"
+          description: The deployed token networks address.
+      required:
+        - token_network_address
+    Channel:
+      type: object
+      properties:
+        channel_identifier:
+          type: integer
+          description: identifier of the channel
+          example: 21
+        token_network_identifier:
+          type: string
+          description: EIP55-encoded address of the token network the channel is part of
+          example: "0x2a65Aca4D5fC5B5C859090a6c34d164135398226"
+        partner_address:
+          type: string
+          description: EIP55-encoded address of the partner with whom we have opened a channel
+          example: "0x61C808D82A3Ac53231750daDc13c777b59310bD9"
+        token_address:
+          type: string
+          description: EIP55-encoded address of the token we are trading in the channel
+          example: "0xEA674fdDe714fd979de3EdF0F56AA9716B898ec8"
+        balance:
+          type: integer
+          description: Amount of the token_address token we have available for payments.
+          example: 25000000
+        total_deposit:
+          type: integer
+          description: Amount of the token_address token we have deposited into the contract for this channel.
+          example: 35000000
+        state:
+          type: string
+          enum: ['opened', 'closed', 'settled']
+          example: 35000000
+        settle_timeout:
+          type: integer
+          description: "The number of blocks that are required to be mined from the time that close() is called until the channel can be settled with a call to settle()"
+          example: 500
+        reveal_timeout:
+          type: integer
+          description: "The maximum number of blocks allowed between the setting of a hashlock and the revealing of the related secret."
+          example: 40
+      required: 
+        - channel_identifier
+        - token_network_identifier
+        - partner_address
+        - token_address
+        - balance
+        - total_deposit
+        - state
+        - settle_timeout
+        - reveal_timeout
+    Partner:
+      type: object
+      properties:
+        partner_address:
+          type: string
+          description: The partner we have a channel with
+          example: "0x2a65aca4d5fc5b5c859090a6c34d164135398226"
+        channel:
+          type: string
+          description: A link to the channel resource
+          example: "/api/<version>/channels/0x61C808D82A3Ac53231750daDc13c777b59310bD90x2a65aca4d5fc5b5c859090a6c34d164135398226"
+      required: 
+        - partner_address
+        - channel
+    Transfer:
+      type: object
+      properties:
+        channel_identifier: 
+          type: string
+          example: "255"
+        initiator:
+          type: string
+          example: "0x5E1a3601538f94c9e6D2B40F7589030ac5885FE7"
+        locked_amount:
+          type: string
+          example: "119"
+        payment_identifier:
+          type: string
+          example: "1"
+        role:
+          type: string
+          enum: ['initiator', 'mediator', 'target']
+        target:
+          type: string
+          example: "0x00AF5cBfc8dC76cd599aF623E60F763228906F3E"
+        token_address:
+          type: string
+          example: "0xd0A1E359811322d97991E03f863a0C30C2cF029C"
+        token_network_identifier:
+          type: string
+          example: "0x111157460c0F41EfD9107239B7864c062aA8B978"
+        transferred_amount:
+          type: string
+          example: "331"
+    Errors:
+      type: object
+      properties:
+        errors: 
+          type: array
+          items:
+            type: string
+    
